--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="cheat_button">Cheat</string>
     <string name="warning_text">Are you sure you want to do this?</string>
     <string name ="show_answer_button">Show Answer</string>
-    <string name="hide_answer_button">Hide Answer</string>
+    <string name="back_button">Back</string>
     <string name="judgement_toast">Cheating is wrong.</string>
     <string name="previous_button">Previous</string>
     <string name="next_button">Next</string>
